[package]
name = "at2"
version = "0.1.0"
authors = ["Andrew Seales <agxs@frozenmercury.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"
pixels = "0.2.0"
winit = "0.22.0"
winit_input_helper = "0.6.0"
bvh = "0.3.2"
rand = "0.8.4"
