[package]
name = "at2"
version = "0.1.0"
authors = ["Andrew Seales <agxs@frozenmercury.co.uk>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-foundation = "0.9.3"
env_logger = "0.9.0"
log = "0.4.17"
pixels = "0.9.0"
winit = "0.26.1"
winit_input_helper = "0.12.0"
bvh = "0.3.2"
rand = "0.8.5"
rayon = "1.5.2"
